added button interfaces

--- a/libs/elements/layout/buttons/src/lib/normal-button/normal-button.component.html
+++ b/libs/elements/layout/buttons/src/lib/normal-button/normal-button.component.html
@@ -1,1 +1,11 @@
-<p>normal-button works!</p>
+<button 
+    class="elewa-normal-button"
+    [style.backgroundColor]="buttonData.bgColor"
+    [style.color]="buttonData.color"
+    (click)="handleClick()"
+    (mouseenter)="handleMouseEnter()"
+    (mouseleave)="handleMouseLeave()"
+>
+<span>{{buttonData.text}}</span>
+
+</button>
